--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -31,10 +31,15 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-[1] Kaixiang Wang, Xiaojian Ding, Fan Yang, Non-Overlapped Multi-View Weak-Label Learning Guided by Multiple Correlations, ACM International Conference on Multimedia, 4690–4698, 2024.
-[2] Menghan Cui, Kaixiang Wang, Xiaojian Ding, Zihan Xu, Xin Wang, Pengcheng Shi, Multi-view Stable Feature Selection with Adaptive Optimization of View Weights, Knowledge-Based Systems, 299: 111970, 2024.
-[3] Kaixiang Wang, Robust Embedding Framework with Dynamic Hypergraph Fusion for Multi-label Classification. IEEE International Conference on Multimedia and Expo, 982-987, 2019.
+
+[1] Kaixiang Wang, Xiaojian Ding, Fan Yang, Non-Overlapped Multi-View Weak-Label Learning Guided by Multiple Correlations, ACM International Conference on Multimedia, 2024.
+
+[2] Menghan Cui, Kaixiang Wang, Xiaojian Ding, Zihan Xu, Xin Wang, Pengcheng Shi, Multi-view Stable Feature Selection with Adaptive Optimization of View Weights, Knowledge-Based Systems, 2024.
+
+[3] Kaixiang Wang, Robust Embedding Framework with Dynamic Hypergraph Fusion for Multi-label Classification. IEEE International Conference on Multimedia and Expo, 2019.
+
 [4] Kaixiang Wang, Ming Yang, Wanqi Yang, Lei Wang, Double-Scale Correlation Analysis for Robust Multi-label Classification, Applied Intelligence, 52:16382-16397, 2022.
-[5] Kaixiang Wang, Ming Yang, Wanqi Yang and Yilong Yin, Deep Correlation Structure Preserved Label Space Embedding for Multi-label Classification. Proceedings of The 10th Asian Conference on Machine Learning, PMLR, 95: 1-16, 2018.
+
+[5] Kaixiang Wang, Ming Yang, Wanqi Yang and Yilong Yin, Deep Correlation Structure Preserved Label Space Embedding for Multi-label Classification. Proceedings of The 10th Asian Conference on Machine Learning, 2018.
 
 
